--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,31 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  margin: 0;
+}
+
+.banner {
+  margin: 0;
+}
+
+img {
+  margin: 0;
+}
+
+.img-flex {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  margin: 0;
+}
