--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,15 @@ body {
   margin: 0;
 }
 
+.body {
+  margin: 0;
+  position: relative;
+}
+
 .banner {
   margin: 0;
+  display: flex;
+  position: absolute;
 }
 
 img {
@@ -20,7 +27,8 @@ img {
 }
 
 .img-flex {
-  margin: 0;
+  display: block;
+  width: 100%;
 }
 
 h2 {
@@ -33,4 +41,25 @@ p {
 
 a {
   margin: 0;
+}
+
+.btn {
+  display: inline-block;
+  margin: 0;
+  font-size: 1.125rem;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  border: 3px solid #333;
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+}
+
+.btn:hover {
+  background-color: #000;
+  border-color: #000;
+}
+
+.btn-big {
+  font-size: 1.5rem;
 }
