--- a/originals/main2.css
+++ b/originals/main2.css
@@ -12,25 +12,25 @@ body {
   margin: 0;
 }
 
-.banner {
-  /* margin: 0;
+.body {
+  margin: 0;
   position: relative;
   overflow: hidden;
-  max-height: 500px; */
+  max-height: 500px;
   /* align-items: center; */
   /* justify-content: center; */
 }
 
-.body {
-  /* margin: 0;
+.banner {
+  margin: 0;
   display: flex;
   position: absolute;
   width: 100%;
   max-width: 45em;
   left: 50%;
   /* bottom: 20%; */
-  /* top: 30%;
-  transform: translateX(-50%); */
+  top: 30%;
+  transform: translateX(-50%);
 }
 
 img {
@@ -45,7 +45,7 @@ img {
 .content {
   /* text-align: left;
   align-content: flex-end; */
-  /* max-width: 30%; */
+  max-width: 30%;
 }
 
 .banner .img-flex {
