--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
-  font-family: Roboto "Roboto-Condensed", san-serif;
+  font-family: Roboto, sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 *, *::before, *::after {
@@ -38,8 +39,8 @@ img {
 }
 
 .img-flex {
-  display: flex;
-  width: 100%
+  display: block;
+  width: 100%;
 }
 
 .content {
@@ -54,7 +55,7 @@ img {
 
 h2 {
   margin: 0;
-  font-family: "Roboto-Condensed", sans-serif;
+  font-family: Roboto-Condensed, sans-serif;
 }
 
 p {
@@ -64,7 +65,7 @@ p {
 
 a {
   margin: 0;
-  font-family: "Roboto-Condensed", sans-serif;
+  font-family: Roboto-Condensed, sans-serif;
 }
 
 .btn {
