--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 html {
   box-sizing: border-box;
   line-height: 1.5;
-  font-family: Roboto, sans-serif;
+
+  /* font-family: Roboto, sans-serif; */
   font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.5rem;
 }
 
 *, *::before, *::after {
@@ -18,26 +20,6 @@ body {
   position: relative;
   overflow: hidden;
   max-height: 500px;
-
-  /* align-items: center; */
-  /* justify-content: center; */
-}
-
-.body {
-  margin: 0;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  width: 100%;
-  max-width: 35em;
-  left: 50%;
-  bottom: 0;
-  top: 0;
-  transform: translateX(-50%);
-}
-
-img {
-  margin: 0;
 }
 
 .img-flex {
@@ -45,31 +27,37 @@ img {
   width: 100%;
 }
 
+.body {
+  display: flex;
+  position: absolute;
+
+  /* align-items: center; */
+  width: 100%;
+  max-width: 50em;
+  left: 50%;
+  right: 50%;
+  bottom: 25%;
+  top: 5%;
+  padding: 1.5rem;
+  margin: 0;
+  transform: translateX(-50%);
+  justify-content: center;
+}
+
+.mecha {
+  margin: 0;
+  width: 100%;
+  max-width: 15em;
+  max-height: 10em;
+  padding: 1em;
+}
+
 .content {
-  padding-left: 1em;
+  max-width: 60%;
 }
 
 .banner .img-flex {
   margin: 0;
-}
-
-h2 {
-  margin: 0;
-  font-family: Roboto-Condensed, sans-serif;
-  font-size: 2rem;
-  line-height: 1;
-}
-
-p {
-  margin: 0;
-  font-family: Roboto, sans-serif;
-  font-size: 1.25rem;
-  padding-bottom: .5em;
-}
-
-a {
-  margin: 0;
-  font-family: Roboto-Condensed, sans-serif;
 }
 
 .btn {
@@ -91,4 +79,28 @@ a {
 
 .btn-big {
   font-size: 1.5rem;
+}
+
+img {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+  font-family: Roboto-Condensed, sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.25;
+}
+
+p {
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  padding-bottom: .5em;
+}
+
+a {
+  margin: 0;
+  font-family: Roboto-Condensed, sans-serif;
+  color: #fff;
 }
