--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,112 @@
-html {
+/* html {
   box-sizing: border-box;
   line-height: 1.5;
+  font-family:  sans-serif;
+  font-family: Roboto, "Roboto Condensed", sans-serif;
+  font-size: 1.5em;
+}
 
-  /* font-family: Roboto, sans-serif; */
-  font-family: "Roboto Condensed", sans-serif;
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+.body {
+  margin: 0;
+  position: relative;
+  overflow: hidden;
+  max-height: 500px;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-flex {
+  display: flex;
+  width: 100%;
+}
+
+.banner {
+  margin: 0;
+  position: absolute;
+  display: flex;
+  width: 100%;
+  max-width: 50em;
+  transform: translateX(-50%);
+  top: 10%;
+  right: 0;
+  bottom: 0;
+  left: 50%;
+   flex-direction: column;
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+}
+
+.banner .img-flex {
+  margin: 0;
+}
+
+.mecha {
+  margin: 0;
+  display: inline-block;
+}
+
+.content {
+  margin: 0;
+  display: inline-block;
+  font-style: Roboto, sans-serif;
+}
+
+.btn {
+  display: inline-block;
+  margin: 0;
+  font-size: 1.125rem;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  border: 3px solid #333;
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+}
+
+.btn-big {
   font-size: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #000;
+  border-color: #000;
+}
+
+body {
+  margin: 0;
+}
+
+img {
+  margin: 0;
+  width: 100%;
+
+}
+
+h2 {
+  margin: 0;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+p {
+  margin: 0;
+
+}
+
+a {
+  margin: 0;
+} */
+
+html {
+  box-sizing: border-box;
+  font-family: Roboto, "Roboto Condensed", sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -15,11 +117,12 @@ body {
   margin: 0;
 }
 
-.banner {
-  margin: 0;
+.body {
   position: relative;
-  overflow: hidden;
+  text-align: left;
   max-height: 500px;
+  overflow: hidden;
+  margin: 0;
 }
 
 .img-flex {
@@ -27,37 +130,40 @@ body {
   width: 100%;
 }
 
-.body {
-  display: flex;
+.banner {
   position: absolute;
-
-  /* align-items: center; */
-  width: 100%;
-  max-width: 50em;
-  left: 50%;
-  right: 50%;
-  bottom: 25%;
-  top: 5%;
-  padding: 1.5rem;
-  margin: 0;
   transform: translateX(-50%);
-  justify-content: center;
-}
-
-.mecha {
-  margin: 0;
+  left: 50%;
+  max-width: 50em;
   width: 100%;
-  max-width: 15em;
-  max-height: 10em;
-  padding: 1em;
+  padding: 1.5rem;
+  bottom: 0;
+  margin: 0;
+  display: flex;
+  max-height: 500px;
 }
 
 .content {
-  max-width: 60%;
+  margin: 0;
+  width: 100%;
+  max-width: 45em;
 }
 
-.banner .img-flex {
+.content h2 {
+  display: inline;
+  flex-wrap: nowrap;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: left;
+  padding: 0;
   margin: 0;
+  line-height: 1.4;
+}
+
+.content p {
+  margin: 0 0 .5rem;
+  padding: 0;
+  font-size: 2rem;
 }
 
 .btn {
@@ -79,28 +185,4 @@ body {
 
 .btn-big {
   font-size: 1.5rem;
-}
-
-img {
-  margin: 0;
-}
-
-h2 {
-  margin: 0;
-  font-family: Roboto-Condensed, sans-serif;
-  font-size: 2rem;
-  font-weight: bold;
-  line-height: 1.25;
-}
-
-p {
-  margin: 0;
-  font-family: Roboto, sans-serif;
-  padding-bottom: .5em;
-}
-
-a {
-  margin: 0;
-  font-family: Roboto-Condensed, sans-serif;
-  color: #fff;
 }
