--- a/css/main.css
+++ b/css/main.css
@@ -132,13 +132,14 @@ body {
 
 .banner {
   position: absolute;
+  width: 100%;
+  max-width: 50em;
   transform: translateX(-50%);
   left: 50%;
-  max-width: 50em;
-  width: 100%;
-  padding: 1.5rem;
-  bottom: 0;
+  padding: 0;
+  bottom: 1em;
   margin: 0;
+  top: 15%;
   display: flex;
   max-height: 500px;
 }
@@ -147,33 +148,47 @@ body {
   margin: 0;
 }
 
+.mecha {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+
+  /* padding: 1rem 0rem 1rem 2rem;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  flex: 1 1 auto; */
+}
+
 .content {
   margin: 0;
   width: 100%;
-  max-width: 45em;
+  padding: 0;
 }
 
 .content h2 {
   display: inline;
   flex-wrap: nowrap;
-  font-size: 3rem;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
+  font-size: 3rem;
   text-align: left;
   padding: 0;
-  line-height: 1.4;
+  line-height: 1.25;
 }
 
 .content p {
-  margin: 0 0 .5rem;
+  margin: 0;
   padding: 0;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .btn {
   display: inline-block;
   margin: 0;
-  font-size: 1.125rem;
-  padding: .4em .75em .3em;
+  font-size: 1.5rem;
+  padding: .3em .75em .4em;
   border-radius: 8px;
   border: 3px solid #333;
   text-decoration: none;
