--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ body {
   max-width: 50em;
   transform: translateX(-50%);
   left: 50%;
-  padding: 0;
+  padding: 0 0 0 3rem;
   bottom: 1em;
   margin: 0;
   top: 15%;
@@ -154,6 +154,7 @@ body {
   max-width: 15em;
   margin: 0 auto;
   vertical-align: middle;
+  left: 15%;
 
   /* text-align: center; */
   /* padding: 1rem 0rem 1rem 2rem;
@@ -169,22 +170,23 @@ body {
   width: 100%;
   padding: 0;
   max-width: 30em;
+  padding: 0 0 1rem 1rem;
 }
 
 .content h2 {
-  display: inline;
-  flex-wrap: nowrap;
+  display: block;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
   font-size: 3rem;
   text-align: left;
+  margin: 0;
   padding: 0;
   line-height: 1.25;
 }
 
 .content p {
   margin: 0;
-  padding: 0;
+  padding: 0 0 1rem;
   font-size: 1.5rem;
 }
 
