--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ body {
   padding: 0;
   bottom: 1em;
   margin: 0;
-  top: 20%;
+  top: 15%;
   display: flex;
   max-height: 500px;
 }
@@ -168,8 +168,8 @@ body {
   display: inline-block;
   margin: 0;
   width: 100%;
-  max-width: 30em;
-  padding: 0 4rem 1rem 2rem;
+  max-width: 35rem;
+  padding: 0 5rem 1rem 2rem;
 }
 
 .content h2 {
@@ -179,7 +179,7 @@ body {
   font-size: 3rem;
   text-align: left;
   margin: 0;
-  padding: 0 1rem 0 0;
+  padding: 0 5rem 0 0;
   line-height: 1.25;
 }
 
