--- a/css/main2.css
+++ b/css/main2.css
@@ -7,3 +7,24 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  margin: 0
+}
+
+.body {
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+  max-height: 500px;
+  overflow: hidden;
+
+}
