--- a/css/main2.css
+++ b/css/main2.css
@@ -13,18 +13,41 @@ body {
 }
 
 .body {
+  margin: 0;
+  max-height: 500px;
+/* position: relative;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+margin: 0; */
+}
+
+.img-flex {
   position: relative;
+  width: 100%;
+  /* top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  display: block;
+
+  overflow: hidden; */
+}
+
+/* .banner {
+  position: absolute;
+  width: 100%;
+  max-width: 45em;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   margin: 0;
+  z-index: 1000;
 }
 
-.img-flex {
-  display: block;
-  width: 100%;
-  max-height: 500px;
-  overflow: hidden;
-
-}
+.banner .img-flex {
+  margin: 0;
+} */
