--- a/css/main2.css
+++ b/css/main2.css
@@ -15,6 +15,7 @@ body {
 .body {
   margin: 0;
   max-height: 500px;
+  overflow: hidden;
 /* position: relative;
 top: 0;
 right: 0;
@@ -26,28 +27,38 @@ margin: 0; */
 .img-flex {
   position: relative;
   width: 100%;
-  /* top: 0;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   margin: 0;
   display: block;
 
-  overflow: hidden; */
 }
 
-/* .banner {
+.banner {
   position: absolute;
-  width: 100%;
-  max-width: 45em;
-  top: 0;
+  top: 15%;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 25%;
   margin: 0;
-  z-index: 1000;
+  padding: 0;
+  width: 100%;
+  max-width: 45em;
+  z-index: 10;
+  display: flex;
 }
 
 .banner .img-flex {
   margin: 0;
-} */
+}
+
+.mecha {
+  display: inline-block;
+}
+
+.content {
+  display: inline-block;
+  flex-direction: column;
+}
