--- a/css/main2.css
+++ b/css/main2.css
@@ -12,16 +12,13 @@ body {
   margin: 0
 }
 
-.body {
-  margin: 0;
+.banner {
   max-height: 500px;
   overflow: hidden;
-/* position: relative;
-top: 0;
-right: 0;
-bottom: 0;
-left: 0;
-margin: 0; */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .img-flex {
@@ -31,34 +28,67 @@ margin: 0; */
   right: 0;
   bottom: 0;
   left: 0;
-  margin: 0;
   display: block;
-
 }
 
-.banner {
+.content {
   position: absolute;
   top: 15%;
   right: 0;
   bottom: 0;
-  left: 25%;
+  left: 50%;
+  transform: translateX(-50%);
   margin: 0;
   padding: 0;
   width: 100%;
   max-width: 45em;
   z-index: 10;
   display: flex;
+  flex-direction: row;
 }
 
 .banner .img-flex {
   margin: 0;
 }
 
-.mecha {
+.mecha .text{
   display: inline-block;
 }
 
-.content {
+.text {
+  margin: 0 0 0 3rem;
+  padding: 0 3rem 0 0;
+}
+
+.text h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+  margin: 0;
+}
+
+.text p {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  margin: 0 0 1rem;
+}
+
+.btn {
   display: inline-block;
-  flex-direction: column;
+  margin: 0;
+  font-size: 1.5rem;
+  padding: .3em .75em .4em;
+  border-radius: 8px;
+  border: 3px solid #333;
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+}
+
+.btn:hover {
+  background-color: #000;
+  border-color: #000;
+}
+
+.btn-big {
+  font-size: 1.5rem;
 }
