--- a/css/main.css
+++ b/css/main.css
@@ -1,108 +1,3 @@
-/* html {
-  box-sizing: border-box;
-  line-height: 1.5;
-  font-family:  sans-serif;
-  font-family: Roboto, "Roboto Condensed", sans-serif;
-  font-size: 1.5em;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-.body {
-  margin: 0;
-  position: relative;
-  overflow: hidden;
-  max-height: 500px;
-  align-items: center;
-  justify-content: center;
-}
-
-.img-flex {
-  display: flex;
-  width: 100%;
-}
-
-.banner {
-  margin: 0;
-  position: absolute;
-  display: flex;
-  width: 100%;
-  max-width: 50em;
-  transform: translateX(-50%);
-  top: 10%;
-  right: 0;
-  bottom: 0;
-  left: 50%;
-   flex-direction: column;
-  justify-content: center;
-  align-content: space-between;
-  align-items: center;
-}
-
-.banner .img-flex {
-  margin: 0;
-}
-
-.mecha {
-  margin: 0;
-  display: inline-block;
-}
-
-.content {
-  margin: 0;
-  display: inline-block;
-  font-style: Roboto, sans-serif;
-}
-
-.btn {
-  display: inline-block;
-  margin: 0;
-  font-size: 1.125rem;
-  padding: .4em .75em .3em;
-  border-radius: 8px;
-  border: 3px solid #333;
-  text-decoration: none;
-  color: #fff;
-  background-color: #333;
-}
-
-.btn-big {
-  font-size: 1.5rem;
-}
-
-.btn:hover {
-  background-color: #000;
-  border-color: #000;
-}
-
-body {
-  margin: 0;
-}
-
-img {
-  margin: 0;
-  width: 100%;
-
-}
-
-h2 {
-  margin: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: bold;
-  font-size: 2em;
-}
-
-p {
-  margin: 0;
-
-}
-
-a {
-  margin: 0;
-} */
-
 html {
   box-sizing: border-box;
   font-family: Roboto, "Roboto Condensed", sans-serif;
@@ -117,81 +12,65 @@ body {
   margin: 0;
 }
 
-.body {
+.banner {
   position: relative;
-  text-align: left;
   max-height: 500px;
   overflow: hidden;
-  margin: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .img-flex {
-  display: block;
+  /* position: relative; */
   width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
 }
 
-.banner {
+.content {
   position: absolute;
-  width: 100%;
-  max-width: 50em;
-  transform: translateX(-50%);
-  left: 55%;
-  padding: 0;
-  bottom: 1em;
-  margin: 0;
   top: 15%;
+  right: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 45em;
+  z-index: 10;
   display: flex;
-  max-height: 500px;
+  flex-direction: row;
 }
 
 .banner .img-flex {
   margin: 0;
 }
 
-.mecha {
+.mecha .text {
   display: inline-block;
-  width: 100%;
-  max-width: 50em;
-  margin: 0 auto;
-  vertical-align: middle;
-  left: 15%;
-
-  /* text-align: center; */
-  /* padding: 1rem 0rem 1rem 2rem;
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  flex: 1 1 auto; */
 }
 
-.content {
-  position: relative;
-  display: block;
-  margin: 0;
-  width: 100%;
-  max-width: 35rem;
-  padding: 0;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+.text {
+  margin: 0 0 0 3rem;
+  padding: 0 3rem 0 0;
 }
 
-.content h2 {
-  display: block;
+.text h2 {
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: bold;
   font-size: 3rem;
-  text-align: left;
   margin: 0;
-  padding: 0 5rem 0 0;
-  line-height: 1.25;
 }
 
-.content p {
-  margin: 0;
-  padding: 0 0 1rem;
+.text p {
+  font-family: Roboto, sans-serif;
   font-size: 1.5rem;
+  margin: 0 0 1rem;
 }
 
 .btn {
