--- a/css/main.css
+++ b/css/main.css
@@ -16,14 +16,9 @@ body {
   position: relative;
   max-height: 500px;
   overflow: hidden;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
 }
 
 .img-flex {
-  /* position: relative; */
   width: 100%;
   top: 0;
   right: 0;
@@ -34,18 +29,18 @@ body {
 
 .content {
   position: absolute;
-  top: 15%;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
-  padding: 0;
   width: 100%;
   max-width: 45em;
-  z-index: 10;
+  padding: 2em;
   display: flex;
-  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .banner .img-flex {
@@ -54,23 +49,31 @@ body {
 
 .mecha .text {
   display: inline-block;
+  margin: 0;
+}
+
+.mecha {
+  width: 100%;
+  max-width: 35%;
 }
 
 .text {
-  margin: 0 0 0 3rem;
-  padding: 0 3rem 0 0;
+  width: 100%;
+  padding: 2em 2em 0;
 }
 
 .text h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
   margin: 0;
+  line-height: 1;
 }
 
 .text p {
   font-family: Roboto, sans-serif;
   font-size: 1.5rem;
-  margin: 0 0 1rem;
+
+  /* margin: 0 2em 1em 0; */
 }
 
 .btn {
