--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 
 .content {
   position: absolute;
-  top: 0;
+  /* top: 10%; */
   right: 0;
   bottom: 0;
   left: 50%;
@@ -41,6 +41,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  vertical-align: middle;
 }
 
 .banner .img-flex {
@@ -59,7 +60,7 @@ body {
 
 .text {
   width: 100%;
-  padding: 2em 2em 0;
+  padding: 0 2em;
 }
 
 .text h2 {
