--- a/css/main.css
+++ b/css/main.css
@@ -29,19 +29,22 @@ body {
 
 .content {
   position: absolute;
-  /* top: 10%; */
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  flex-direction: row;
+  /* top: 5%;
   right: 0;
-  bottom: 0;
+  bottom: 5%;
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
-  width: 100%;
+  width: 100%;*/
   max-width: 45em;
-  padding: 2em;
+  /* padding: 2em; */
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  vertical-align: middle;
 }
 
 .banner .img-flex {
@@ -51,6 +54,7 @@ body {
 .mecha .text {
   display: inline-block;
   margin: 0;
+  vertical-align: middle;
 }
 
 .mecha {
@@ -59,8 +63,8 @@ body {
 }
 
 .text {
-  width: 100%;
-  padding: 0 2em;
+  width: 120%;
+  padding: 0;
 }
 
 .text h2 {
@@ -73,6 +77,7 @@ body {
 .text p {
   font-family: Roboto, sans-serif;
   font-size: 1.5rem;
+  max-width: 120%;
 
   /* margin: 0 2em 1em 0; */
 }
