--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,6 @@ body {
   margin: 0;
 }
 
-/* .mecha .text {
-  display: inline-block;
-  margin: 0;
-  vertical-align: middle;
-} */
-
 .img-div {
   width: 100%;
   margin: 0;
@@ -57,8 +51,7 @@ body {
 .mecha {
   display: flex;
   width: 70%;
-  margin: 0 0 1rem 2.5rem;
-  /* margin-right: -4rem; */
+  margin: 0 0 1rem 3rem;
 }
 
 .text {
@@ -77,6 +70,7 @@ body {
 .text p {
   font-family: Roboto, sans-serif;
   font-size: 1.5rem;
+  padding: .5rem;
   margin: .75rem 0;
 }
 
