--- a/css/main2.css
+++ b/css/main2.css
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   font-family: Roboto, "Roboto Condensed", sans-serif;
-  line-height: 1.6;
 }
 
 *, *::before, *::after {
@@ -18,6 +17,10 @@ body {
   overflow: hidden;
 }
 
+.banner .img-flex {
+  margin: 0;
+}
+
 .img-flex {
   width: 100%;
   display: block;
@@ -25,47 +28,54 @@ body {
 
 .content {
   position: absolute;
+  display: flex;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  flex-direction: row;
+  /* flex-direction: row; */
+  padding: .5rem 3rem .3rem;
+  margin: 0;
   width: 100%;
   max-width: 45em;
-  padding: 0 1rem;
-  display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .img-div {
-  width: 33%;
+  width: 100%;
   margin: 0;
 }
+.mecha {
+  display: flex;
+  width: 80%;
+}
 
-.text {
-  width: 60%;
+ .text {
+  width: 150%;
+  margin: 0;
+  /*padding: 0 0 .5rem;*/
 }
 
 .text h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
   margin: 0;
-  padding: 0 1rem 0 0;
   line-height: 1.2;
 }
 
 .text p {
   font-family: Roboto, sans-serif;
   font-size: 1.5rem;
-  padding: .5rem;
-  margin: 0;
+  line-height: 1.5;
+  /* padding: .5rem;
+  margin: .75rem 0; */
 }
 
 .btn {
   display: inline-block;
   margin: 0;
   font-size: 1.5rem;
-  padding: .3em .75em .4em;
+  padding: .75em;
   border-radius: 8px;
   border: 3px solid #333;
   text-decoration: none;
